# maliopt-native-plugin

./: README.md  gradlew  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mali_opt_egl.c  mali_opt_extensions.c
app/src/main/java/com/hybridcore/maliopt/: MaliOptNative.java
app/src/main/res/values/: strings.xml  themes.xml
